# IslamicAPI

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README_AR.md  README_ID.md  README_TR.md  README_UR.md  agents.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml  sync-data.yml
data/api/: index.json
data/audio/: validation-report.json
data/audio/normalized/: audio-index.json  haramain-compilations.json
data/fonts/: validation-report.json
data/fonts/css/: deen-fonts.css  metadata.json
data/fonts/files/: bazzi-v7-full.metadata.json  doori-v8-full.metadata.json  (+22 more)
data/hadith/: validation-report.json
data/metadata/: discovery-report.json  fetch-manifest.json  source-registry.json  validation-report.json
data/prayer/: calculation-methods.json
data/quran/: validation-report.json
deensdk/: __init__.py  core.py  models.py
docs/: deen-web.js  deen-web.min.js  index.html  playground.html  styles.css
docs/wiki/: Dataset-Pipeline.md  Getting-Started.md  Home.md  Mobile-SDKs.md
scripts/: generate-data.js  push-to-gitlab.js
scripts/build-api-index/: index.js
scripts/discover-sources/: index.js
scripts/fetch-datasets/: index.js
scripts/lib/: fetch.js  io.js
scripts/normalize-audio/: index.js
scripts/normalize-fonts/: index.js
scripts/normalize-hadith/: index.js
scripts/normalize-quran/: index.js
scripts/sync-updates/: index.js
scripts/validate-data/: index.js
src/: server.js
tests/: sdk.test.js  test_sdk.py
wiki/: Javascript-SDK.md  Python-SDK.md  Static-API.md  Timestamps-and-Downloads.md
(+172 files in other folders)
