[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deensdk"
version = "0.1.0"
description = "Offline-first Islamic structured data SDK and reproducible dataset pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pydantic>=2"]

[tool.setuptools]
packages = ["deensdk"]
include-package-data = true
